Wed Jul 28 12:29:41 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Receiver/QC_Receiver.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Sender/QC_Sender.cpp:
          Fuzz

Wed Jul 28 07:30:33 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          LocalityManager/run_test.pl doesn't exist and
          LocalityManager/CommandlinePassage/run_test.pl wasn't listed.
          Corrected this.

Wed Jul 28 07:17:02 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Receiver/QC_Receiver.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Sender/QC_Sender.cpp:
          Fuzz

Tue Jul 27 23:19:55 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Daemon/Locality_Manager.mpc:

          Further tweak of previous fix.

Tue Jul 27 22:45:12 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Daemon/Locality_Manager.mpc:

          Attempt at a fix for the installed build.

Tue Jul 27 16:00:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Receiver/QC_Receiver.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Sender/QC_Sender.cpp:
          Resolved compile issue on Windows.

Tue Jul 27 15:52:17 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Sender/DDS_Sender.mpc:
          Resolve compile issue on Windows.

Tue Jul 27 07:23:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/Log_Macros.h:
          Added ace/Log_Msg.h include.

Tue Jul 27 06:29:09 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/docs/DDS4CCM Cheat Sheet.rtf:
          Replaced.

Mon Jul 26 23:16:54 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Configuration/Configuration.mpc:
